email to userName change
